# decimal_for_cpp

./: .gitignore  CMakeLists.txt
include/dec/: fixed.h  utils.h
tests/: decimalTest.ipp  decimalTestIo.ipp  runner.cpp
